--- a/web/template/aceptarCuentas.html
+++ b/web/template/aceptarCuentas.html
@@ -57,8 +57,8 @@
                                   <label>{{pre_registro.career.name}}</label><br>
                                   <label>{{pre_registro.dni}}</label>
                                                             
-                            <button type="submit" class="btn btn-danger" name="tipo" value="{{pre_registro.id}} Eliminar">Eliminar</button>
-                            <button type="submit" class="btn btn-primary" name="tipo" value="{{pre_registro.id}} Aceptar">Aceptar</button>
+                            <button type="submit" class="btn btn-danger" name="tipo" value="{{pre_registro.id}} Eliminar">Declinar solicitud</button>
+                            <button type="submit" class="btn btn-primary" name="tipo" value="{{pre_registro.id}} Aceptar">Crear usuario</button>
                           
                             {% endfor %}
                           </div>
