--- a/web/template/index.html
+++ b/web/template/index.html
@@ -42,7 +42,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="fa fa-bars color-white"></span>
 					</button>
-					<h1><a class="navbar-brand" href="/index" data-0="line-height:90px;" data-300="line-height:50px;">SISTEMA DE EGRESADOS UTP
+					<h1><a class="navbar-brand" href="/" data-0="line-height:90px;" data-300="line-height:50px;">SISTEMA DE EGRESADOS UTP
 					</a></h1>
 				</div>
 				<div class="navbar-collapse collapse">
@@ -87,10 +87,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button type="button" data-trigger="focus" id ="registro" name="Live Demo" class="btn btn-primary btn-lg" required="required" style="background-color: rgb(3a906d);">Registrarse</button>
+										<button type="button" data-trigger="focus" id ="registro" class="btn btn-primary btn-sm " required="required" >Registrarse</button>
 									</div>
 									<div class="form-group">
-										<button type="button" data-trigger="focus" id ="ingreso" name="Get Now" class="btn btn-primary btn-lg" required="required">Ingresar</button>
+										<button type="button" data-trigger="focus" id ="ingreso" class="btn btn-primary btn-sm" required="required">Ingresar</button>
 									</div>
 								</form>
 							</div>
@@ -112,10 +112,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button type="livedemo" data-trigger="focus" id ="registro" name="purchase" class="btn btn-primary btn-lg" id ="ingreso" data-trigger="focus" required="required">REGISTRARSE</button>
+										<button type="button" data-trigger="focus" id ="registro" name="purchase" class="btn btn-primary btn-lg" id ="ingreso" data-trigger="focus" required="required">REGISTRARSE</button>
 									</div>
 									<div class="form-group">
-										<button type="getnow" name="subscribe" class="btn btn-primary btn-lg" required="required">INGRESAR</button>
+										<button type="button" name="subscribe" class="btn btn-primary btn-lg" required="required">INGRESAR</button>
 									</div>
 								</form>
 							</div>
@@ -123,11 +123,11 @@
 				    </div>
 				</div>
 
-				<a class="left carousel-control hidden-xs" href={% static "#carousel-slider" %} data-slide="prev">
+				<a class="left carousel-control hidden-xs" href="#carousel-slider" data-slide="prev">
 					<i class="fa fa-angle-left"></i>
 				</a>
 
-				<a class=" right carousel-control hidden-xs"href={% static "#carousel-slider" %} data-slide="next">
+				<a class=" right carousel-control hidden-xs"href="#carousel-slider"data-slide="next">
 					<i class="fa fa-angle-right"></i>
 				</a>
 			</div> <!--/#carousel-slider-->
@@ -158,7 +158,7 @@
 									<ul>
 
 										<div class="slide-body" data-group="slide">
-											<li><img alt="" class="img-responsive" src={% static  "img/grados2015.jpg" %}width="100%" height="350"/></li>
+											<li><img alt="" class="img-responsive" src={% static  "img/grados2015.jpg" %} width="100%" height="350"/></li>
 											<li><img alt="" class="img-responsive" src={% static "img/grados2014.jpg"%} width="100%" height="350"/></li>
 											<li><img alt="" class="img-responsive" src={% static  "img/grados_julio.jpg"%} width="100%" height="350"/></li>
 
