--- a/web/template/index.html
+++ b/web/template/index.html
@@ -87,10 +87,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button type="button" data-trigger="focus" id ="registro" class="btn btn-primary btn-sm " required="required" >Registrarse</button>
+										<button type="button" data-trigger="focus" id ="registro" class="btn btn-primary btn-lg " required="required" >Registrarse</button>
 									</div>
 									<div class="form-group">
-										<button type="button" data-trigger="focus" id ="ingreso" class="btn btn-primary btn-sm" required="required">Ingresar</button>
+										<button type="button" data-trigger="focus" id ="ingreso" class="btn btn-primary btn-lg" required="required">Ingresar</button>
 									</div>
 								</form>
 							</div>
@@ -112,10 +112,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button type="button" data-trigger="focus" id ="registro" name="purchase" class="btn btn-primary btn-lg" id ="ingreso" data-trigger="focus" required="required">REGISTRARSE</button>
+										<button type="button" data-trigger="focus" id ="registro2" class="btn btn-primary btn-lg " >Registrarse</button>
 									</div>
 									<div class="form-group">
-										<button type="button" name="subscribe" class="btn btn-primary btn-lg" required="required">INGRESAR</button>
+										<button type="button" data-trigger="focus" id ="ingreso2" class="btn btn-primary btn-lg" >Ingresar</button>
 									</div>
 								</form>
 							</div>
