--- a/web/template/index.html
+++ b/web/template/index.html
@@ -90,10 +90,10 @@
 								<form class="form-inline">
 									<div class="form-group">
 
-										<button id = "registro1" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
+										<button id = "registro1" type="button" data-trigger="focus" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
 									</div>
 									<div class="form-group">
-										<button id = "ingreso1" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
+										<button id = "ingreso1" type="button" data-trigger="focus" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
 										
 									</div>
 								</form>
@@ -117,10 +117,10 @@
 								<form class="form-inline">
 									<div class="form-group">
 
-										<button id = "registro2" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
+										<button id = "registro2" type="button" data-trigger="focus" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
 									</div>
 									<div class="form-group">
-										<button id = "ingreso2" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
+										<button id = "ingreso2" type="button" data-trigger="focus" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
 									</div>
 								</form>
 							</div>
