--- a/web/template/index.html
+++ b/web/template/index.html
@@ -23,17 +23,10 @@
 		<link rel="stylesheet" href={% static "css/font-awesome.min.css"%}>
 		<!-- skin -->
 		<link rel="stylesheet" href={% static "skin/default.css"%}>
-        <!-- =======================================================
-            Theme Name: Green
-            Theme URL: https://bootstrapmade.com/green-free-one-page-bootstrap-template/
-            Author: BootstrapMade
-            Author URL: https://bootstrapmade.com
-        ======================================================= -->
     </head>
 
+
     <body>
-
-
 	<div class="header">
 	<section id="header" class="appear">
 
@@ -43,12 +36,12 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="fa fa-bars color-white"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">SISTEMA DE EGRESADOS UTP
+					<h1><a class="navbar-brand" href="/" data-0="line-height:90px;" data-300="line-height:50px;">SISTEMA DE EGRESADOS UTP
 					</a></h1>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
-						<li class="active"><a href="#index">Inicio</a></li>
+						<li class="active"><a href="/">Inicio</a></li>
 						<li><a href="#section-about">Nosotros</a></li>
 						<li><a href="#team">Equipo</a></li>
 						<li><a href="#"> Login</a></li>
@@ -87,10 +80,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button id = "registro1" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
+										<button id = "registro1" data-trigger="focus" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
 									</div>
 									<div class="form-group">
-										<button id = "ingreso1" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
+										<button id = "ingreso1" data-trigger="focus" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
 										
 									</div>
 								</form>
@@ -113,10 +106,10 @@
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
 								<form class="form-inline">
 									<div class="form-group">
-										<button id = "registro2" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
+										<button id = "registro2" data-trigger="focus" type="button" class="btn btn-primary btn-medium" required="required" style="background-color: #3a906d" >REGISTRARSE</button>
 									</div>
 									<div class="form-group">
-										<button id = "ingreso2" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
+										<button id = "ingreso2" data-trigger="focus" type="button" class="btn btn-primary btn-medium" required="required" style=" background-color: #fff; color:black" >INGRESAR</button>
 									</div>
 								</form>
 							</div>
