botón esquina derecha login

--- a/web/template/formularioEgresado.html
+++ b/web/template/formularioEgresado.html
@@ -91,7 +91,9 @@
                   </select>
                 </div>
               </div>
-            <center><button type="submit" style="background-color:#3a906d; color:white;" class="btn btn-primary">Enviar</button></center>
+            <center>
+              <button type="submit" style="background-color:#3a906d; color:white;" class="btn btn-primary">Enviar</button>
+            </center>
         </form>
         {% if mensaje.0 %}
             <span>{{mensaje.1}}</span>
