--- a/web/template/index.html
+++ b/web/template/index.html
@@ -44,7 +44,7 @@
 						<li class="active"><a href="/">Inicio</a></li>
 						<li><a href="#section-about">Nosotros</a></li>
 						<li><a href="#team">Equipo</a></li>
-						<li><a href="#"> Login</a></li>
+						<li><button id = "login_nav" data-trigger="focus" type="button" class="btn btn-primary btn-sm" required="required" style=" background-color: #3a906d; color:white" >INGRESAR</button></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
