--- a/web/template/index.html
+++ b/web/template/index.html
@@ -44,7 +44,7 @@
 						<li class="active"><a href="/">Inicio</a></li>
 						<li><a href="#section-about">Nosotros</a></li>
 						<li><a href="#team">Equipo</a></li>
-						<li><button id = "login_nav" data-trigger="focus" type="button" class="btn btn-primary btn-sm" required="required" style=" background-color: #3a906d; color:white" >INGRESAR</button></li>
+						<li><button id = "login_nav" data-trigger="focus" type="button" class="btn btn-primary btn-sm" required="required" style=" background-color: transparent; color:white; padding-top:10px; font-size:12px; letter-spacing: .1em;">INGRESAR</button></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
@@ -320,8 +320,6 @@
                     <ul class="social-network social-circle">                  
                         <li><a href="https://www.facebook.com/aseutpe" target = "_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/aseutp" target = "_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
 				</div>
 			</div>
