--- a/web/template/formularioEgresado.html
+++ b/web/template/formularioEgresado.html
@@ -90,8 +90,9 @@
               </div>
             <br>
             <center><button type="submit" class="btn btn-primary">Enviar</button></center>
+            <center><button type="submit" class="btn btn-primary btn-medium"  style="background-color: #3a906d" onclick = "location='/'"/>Regresar</center>
         </form>
-        {% if mensaje.0 %}
+        {% if mensaje.0 %}  
             <span>{{mensaje.1}}</span>
         {% endif %}
       </div>
