--- a/web/template/DashBoardRoot.html
+++ b/web/template/DashBoardRoot.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="/aceptar_cuentas?dni={{usuario.dni}}">Cuentas <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/aceptar_cuentas_admin?username={{usuario.username}}">Cuentas <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="#">Actividades <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/dashboard_admin?dni={{usuario.dni}}">Perfil</a>
+              <a class="nav-link" href="/dashboard_root?username={{usuario.username}}">Perfil</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
@@ -62,13 +62,8 @@
                 <img class="circular" src={% static "varios/perfil.jpg" %}>
               </div>
               <div class="col-sm-7 col-md-7 col-lg-9 ">
-                <h3>{{usuario.user.first_name}}</h3>
-                <h4>{{usuario.user.last_name}}</h4>
-                <h6>{{usuario.dni}}</h6>
-                <h6>{{usuario.user.email}}</h6>
-                <h6>{{usuario.country}}</h6>
-                <h6>{{usuario.genre}}</h6>
-                <h6>{{usuario.cellphone}}</h6>
+                <h3>{{usuario.username}}</h3>
+                <h4>{{usuario.email}}</h4>
               </div>
             </div>
             <div class="row box">
@@ -82,7 +77,7 @@
               </div>
               <div class="col-md-3">  
                 <ul style="">
-                  <li><a href="">Crear actividad</a></li>
+                  <li><a href="">Crear categorías</a></li>
                   <li><a href="aceptar_cuentas/">Gestión de cuentas</a></li>
                   <li><a href="">Editar información</a></li>
                   <li><a href="/logout">Cerrar sesión</a></li>
