--- a/web/template/ChangePassword.html
+++ b/web/template/ChangePassword.html
@@ -29,6 +29,18 @@
 
   </style>
   <body>
+
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-inverse bg-inverse"> 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+              <a class="nav-link" href="/">INICIO <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
   <section class="container-fluid">
     <div class="row justify-content-center box">
       <div class="col-sm-8 col-md-6 col-lg-5 align-self-center contenido">
