--- a/web/template/DashBoardRoot.html
+++ b/web/template/DashBoardRoot.html
@@ -78,7 +78,7 @@
               <div class="col-md-3">  
                 <ul style="">
                   <li><a href="">Crear categorías</a></li>
-                  <li><a href="aceptar_cuentas/">Gestión de cuentas</a></li>
+                  <li><a href="/aceptar_cuentas_admin?username={{usuario.username}}">Gestión de cuentas</a></li>
                   <li><a href="">Editar información</a></li>
                   <li><a href="/logout">Cerrar sesión</a></li>
                 </ul>
