--- a/web/template/aceptarCuentasAdmin.html
+++ b/web/template/aceptarCuentasAdmin.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Cuentas</title> 
+  <title>Activación Cuentas</title> 
   
       <link rel="stylesheet" href="css/style.css">
 <!-- Bootstrap CSS -->
@@ -102,12 +102,17 @@
         </button>
       </div>
       <div class="modal-body">
-        <center>
-          <h6>{{pre_registro.dni}}</h6>
-          <h6>{{pre_registro.country.name}}</h6>
-          <h6>{{pre_registro.genre}}</h6>
-          <h6>{{pre_registro.cellphone}}</h6>
-        </center>
+        <left>
+          <h6>Dni: {{pre_registro.dni}}</h6>
+          <h6>País: {{pre_registro.country.name}}</h6>
+          {% if usuario.genre == "male" %}
+              <h6>Género: Masculino</h6>
+          {% endif %}
+          {% if usuario.genre == "female" %}
+              <h6>Género: Femenino</h6>
+          {% endif %}
+          <h6>Teléfono: {{pre_registro.cellphone}}</h6>
+        </left>
 
       </div>
       <div class="modal-footer">
