--- a/web/template/index.html
+++ b/web/template/index.html
@@ -42,7 +42,6 @@
 					<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
 						<li class="active"><a href="/">Inicio</a></li>
 						<li><a href="#section-about">Nosotros</a></li>
-						<li><a href="#team">Equipo</a></li>
 						<li><button id = "login_nav" data-trigger="focus" type="button" class="btn btn-primary btn-sm" required="required" style=" background-color: transparent; color:white; padding-top:10px; font-size:12px; letter-spacing: .1em;">INGRESAR</button></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
@@ -256,7 +255,7 @@
 	<script src={% static "js/jquery.isotope.min.js" %}></script>
 	<script src={% static "js/jquery.nicescroll.min.js" %}></script>
 	<script src={% static "js/fancybox/jquery.fancybox.pack.js" %}></script>
-	<script src={% static "js/skrollr.min.js" %}></script> %}
+	<script src={% static "js/skrollr.min.js" %}></script> 
 	<script src={% static "js/jquery.scrollTo.js" %}></script>
 	<script src={% static "js/jquery.localScroll.js" %}></script>
 	<script src={% static "js/stellar.js" %}></script>
