organizando fomularios, mensajes de error y datos

--- a/web/template/formularioEgresado.html
+++ b/web/template/formularioEgresado.html
@@ -57,18 +57,18 @@
             <span>Nombre</span><br>
             <div class="input-group">
 
-              <input type="text" required = "True" name = "first_name" class="form-control NAME" placeholder="Nombre" aria-describedby="basic-addon1">
-              <input type="text" required = "True" name = "last_name" class="form-control NAME" placeholder="Apellido" aria-describedby="basic-addon1">
+              <input type="text" required = "True" name = "first_name"  value="{{datos.first_name}}" class="form-control NAME" placeholder="Nombre" aria-describedby="basic-addon1">
+              <input type="text" required = "True" name = "last_name" value="{{datos.last_name}}" class="form-control NAME" placeholder="Apellido" aria-describedby="basic-addon1">
             </div><span class="emsg hidden" id="name">Ingrese un nombre válido</span><br>
 
             <span>Identificación</span><br>
             <div class="input-group">
-              <input type="text" required = "True" name = "dni" class="form-control DNI" placeholder="id" aria-describedby="basic-addon1">
+              <input type="text" required = "True" name = "dni" value="{{datos.dni}}" class="form-control DNI" placeholder="id" aria-describedby="basic-addon1">
             </div><span class="emsg hidden" id="dni">Ingrese un DNI válido</span><br>
 
             <span>Correo electrónico</span><br>
             <div class="input-group">
-              <input type="email" required = "True" name = "email" class="form-control EMAIL" placeholder="email" aria-describedby="basic-addon1">
+              <input type="email" required = "True" name = "email" value="{{datos.email}}" class="form-control EMAIL" placeholder="email" aria-describedby="basic-addon1">
             </div><span class="emsg hidden" id="email">Ingrese un email válido</span><br>
 
             <div class="form-group row">
@@ -119,9 +119,11 @@
               <button type="submit" style="background-color:#3a906d;font-family: sans-serif; font-size:14px; padding:0px 20px; font-size:15px; border-width:0px; font-weight:normal; color:white;" class="btn btn-primary">Enviar</button>
             </center>
         </form>
-        {% if mensaje.0 %}  
-            <span>{{mensaje.1}}</span>
-        {% endif %}
+      {% if mensaje.0 %}
+          {% for error in mensaje.1  %}
+              <h4>{{error}}</h4>
+          {% endfor %}  
+      {% endif %}
       </div>
 
     </section>
