--- a/web/template/formularioAdm.html
+++ b/web/template/formularioAdm.html
@@ -110,7 +110,9 @@
         </div>
       </form>
       {% if mensaje.0 %}
-          <span>{{mensaje.1}}</span>    
+          {% for error in mensaje.1  %}
+              <h4>{{error}}</h4>
+          {% endfor %}  
       {% endif %}
       </div>
     </section>
