reparado el responsive

--- a/web/template/DashBoardAdmin.html
+++ b/web/template/DashBoardAdmin.html
@@ -6,8 +6,6 @@
 
   <title>DashBoard Admin / {{usuario.user.first_name}}</title> 
 
-  
-      <link rel="stylesheet" href={% static "css/style.css" %}>
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   
@@ -38,7 +36,13 @@
 </style>
   <body>
 
-      <nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-inverse bg-inverse"> 
+
+      <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand">!</a>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
@@ -56,6 +60,7 @@
           </ul>
         </div>
       </nav>
+
 
       <section class="container">
         <div class="row box">
