--- a/web/template/aceptarCuentasAdmin.html
+++ b/web/template/aceptarCuentasAdmin.html
@@ -34,8 +34,12 @@
 </style>
   <body>
 
+      <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand">!</a>
 
-      <nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-inverse bg-inverse">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
