--- a/web/template/formularioEgresado.html
+++ b/web/template/formularioEgresado.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pre Registro Egresado</title> 
-  
-      <link rel="stylesheet" href={% static "css/style.css" %}>
-<!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   
 </head>
@@ -35,24 +33,24 @@
       .hidden {
            visibility:hidden;
       }
+      .colorbtn{
+        background-color:#3a906d;
+        border-color: #3a906d;
+      }
 
     </style>
   <body>
 
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-inverse bg-inverse"> 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="/">SISTEMA DE EGRESADOS UTP <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <header>
+      <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+        <div><a class="navbar-brand" href="/">SISTEMA DE EGRESADOS UTP</a></div>
+      </nav>
+  </header>
 
 
 <section class="container-fluid box" >      
       <div class="row justify-content-center caja">
-        <form method="POST" action="" class="col-sm-12 col-md-8 col-lg-5 borde">
+        <form method="POST"  class="col-sm-12 col-md-8 col-lg-5 borde">
             {% csrf_token %}
             <span>Nombre</span><br>
             <div class="input-group">
@@ -115,8 +113,8 @@
                 </div>
               </div>
             <center>
-              <button type="button" style="background-color:#3a906d; border-radius:6px; padding:13px 6px;color:white; border-width:0px; cursor:pointer;" onclick="location.href='/';">Cancelar</button>
-              <button type="submit" style="background-color:#3a906d;font-family: sans-serif; font-size:14px; padding:0px 20px; font-size:15px; border-width:0px; font-weight:normal; color:white;" class="btn btn-primary">Enviar</button>
+              <button type="button" class="btn btn-primary colorbtn"  onclick="location.href='/';">Cancelar</button>
+              <button type="submit" class="btn btn-primary colorbtn">Enviar</button>
             </center>
         </form>
         {% if mensaje.0 %}  
@@ -127,12 +125,10 @@
     </section>
 
 
-    <script src={%static "js/jquery.js"%}></script>
-    <script src={%static "js/tether/dist/js/tether.min.js"%}></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src= {% static "js/regularExpresions.js" %}></script>
 
