--- a/web/template/formularioAdm.html
+++ b/web/template/formularioAdm.html
@@ -10,7 +10,6 @@
 </head>
     <style type="text/css">
       .caja{
-        padding-bottom: 50px; 
         padding-top: 50px;
       }
       .borde
@@ -25,6 +24,7 @@
       background-size: cover;
       background-position: center;
       box-shadow: inset 0px 0px 100px black;
+      height: 100vh;
       }
 
       .emsg{
@@ -37,7 +37,7 @@
         background-color:#3a906d;
         border-color: #3a906d;
       }
-
+      ul {list-style:none}
     </style>
   <body>
 
@@ -103,9 +103,24 @@
             </center>
       </form>
       {% if mensaje.0 %}
-          {% for error in mensaje.1  %}
-              <h4>{{error}}</h4>
-          {% endfor %}  
+          <input id="valor" style="display: none" value="{{mensaje.0}}">
+
+          <div class="modal fade" id="modal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                    {% for error in mensaje.1  %}
+                        <h6>{{error}}</h6>
+                    {% endfor %}
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div>        
       {% endif %}
       </div>
     </section>
@@ -117,6 +132,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src= {% static "js/regularExpresions.js" %}></script>
+    <script type="text/javascript" src={% static "js/form_adm.js" %}></script>
+ 
  
 </body>
 </html>
