--- a/web/template/ConfirmarContraseña.html
+++ b/web/template/ConfirmarContraseña.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block contenido_password %}
-  <section class="container-fluid">
+	  <section class="container-fluid">
     <div class="row justify-content-center box">
       <div class="col-sm-8 col-md-6 col-lg-5 align-self-center contenido">
         <div class="row justify-content-center" style="height: 55vh;">
@@ -11,18 +11,17 @@
                <div>
                 <h3 style="color:white;">Creación de contraseña</h3>          
               </div>
-            
               <form method="POST"> {% csrf_token %}
                 <div class="form-group">
+                <input type="password" name="password1" placeholder="Ingrese Contraseña" class="PASS">
+                <input type="password" name="password2" placeholder="Ingrese de nuevo contraseña">
+                </div><span class="emsg hidden" id="pass">contraseña de 6 a 10 dígitos con almenos una mayúscula y un número</span><br>
 
-                  <input type="password" name="password" placeholder="Ingrese Contraseña" class="PASS">
-                  <input type="password" name="password2" placeholder="Ingrese de nuevo contraseña">
-                </div><span class="emsg hidden" id="pass">contraseña de 6 a 10 dígitos con almenos una mayúscula y un número</span>
-
-                <button type="submit" style="background-color: #3a906d; color:white;" class="btn btn-primary" >Enviar</button>     
-                  {% if error.0 %}
-                      <h3 style="color:white;">{{error.1}}</h3>
-                  {% endif %}
+                <button type="submit" style="background-color: #3a906d; color:white;" class="btn btn-primary" >Enviar</button><br>
+                {% if mensaje.0 %}
+                    <h3 style="color:white;">{{mensaje.1}}</h3>
+                {% endif %}
+              </form>   
               </form>
             </center>
           </div>
@@ -30,7 +29,5 @@
       </div>
     </div>
   </section>
-  
 {% endblock contenido_password %}
-
 
