--- a/web/template/aceptarCuentasAdmin.html
+++ b/web/template/aceptarCuentasAdmin.html
@@ -66,6 +66,10 @@
                 <center><h3 style="padding-top: 100px;">No hay solicitudes pendientes</h3></center>
               {%endif%}
 
+              {% if mensaje.0 %}
+                <h1>{{mensaje.1}}</h1>
+                
+              {% endif %}
               <ul class="list-group">
 
                 
