--- a/web/template/ResetPassword/ConfirmarContraseña.html
+++ b/web/template/ResetPassword/ConfirmarContraseña.html
@@ -1,4 +1,4 @@
-{% extends "BasePassword.html" %}
+{% extends "Bases/BasePassword.html" %}
 {% load staticfiles %}
 
 {% block contenido_password %}
