--- a/web/template/ResetPassword/MensajeLinkInvalido.html
+++ b/web/template/ResetPassword/MensajeLinkInvalido.html
@@ -1,7 +1,7 @@
-{% extends "BasePassword.html" %}
-{% load staticfiles %}
+{% extends "/Bases/BasePassword.html" %}
 
-{% block contenido_password %}<section class="container-fluid">
+{% block contenido_password %}
+<section class="container-fluid">
     <div class="row justify-content-center box">
       <div class="col-sm-8 col-md-6 col-lg-5 align-self-center contenido">
         <div class="row justify-content-center" style="height: 55vh;">
@@ -9,7 +9,7 @@
             <center>
                <div>
                 <div class="form-group">
-                <h3 style="color:white;">Se reestablecio la contraseña</h3> 
+                <h3 style="color:white;">Este link es invalido</h3> 
                 <button type="button" style="background-color: #3a906d; color:white;" class="btn btn-primary colorbtn" onclick="location.href='/';">Inicio</button>         
             </center>
           </div>
