--- a/web/template/ResetPassword/MensajeLinkInvalido.html
+++ b/web/template/ResetPassword/MensajeLinkInvalido.html
@@ -1,4 +1,4 @@
-{% extends "/Bases/BasePassword.html" %}
+{% extends "Bases/BasePassword.html" %}
 
 {% block contenido_password %}
 <section class="container-fluid">
