--- a/web/template/FormatosCorreo/FormatoPassword.html
+++ b/web/template/FormatosCorreo/FormatoPassword.html
@@ -5,7 +5,7 @@ Para nosotros es un placer tenerte en nuestra comunidad de egresados , tu cuenta
 Click en el siguiente link para iniciar se sesión
 {% block reset_link %}
 
-http://{{ domain }}{% url 'web:login_egresado'%}
+https://{{ domain }}{% url 'web:login_egresado'%}
 {% endblock reset_link %}
 Tu contraseña es : {{password}}
 
