agregado editar cuentas Admin

--- a/web/template/Admin/DashBoardAdmin.html
+++ b/web/template/Admin/DashBoardAdmin.html
@@ -54,6 +54,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="/dashboard_admin?dni={{usuario.dni}}">Perfil</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/edit_info_adm/">Cuenta <span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
             </li>
